# cellular_automaton

./: CMakeLists.txt  README.md
src/: cell.h  game.c  game.h  grid.c  grid.h  input.c  input.h  main.c
